# book-creater-agent

./: .gitignore  DEV_NOTES.md  README.md  build_release.bat  run_dev.bat
backend/: .env.example  build.spec  pyproject.toml
backend/app/: launcher.py  main.py
backend/app/adapters/inbound/api/: chat.py  dependencies.py  health.py  projects.py  schemas.py  settings.py
backend/app/adapters/outbound/llm/direct/: provider.py
backend/app/adapters/outbound/persistence/sqlite/: chapter_retriever.py  database.py  llm_profile_repository.py  mappers.py  orm.py  project_repository.py
backend/app/application/: __init__.py  agent_service.py  chat_service.py  context_builder.py  profile_import.py  project_service.py  settings_service.py
backend/app/config/: container.py  settings.py
backend/app/domain/: __init__.py  models.py
backend/app/ports/: __init__.py  chapter_retriever.py  confirmation_gateway.py  embedding_provider.py  file_storage.py  knowledge_store.py  llm_profile_repository.py  llm_provider.py  project_repository.py
backend/app/prompts/: __init__.py  context.py  templates.py
backend/app/skills/: __init__.py  base.py  project_skills.py  registry.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/settings/: page.tsx
frontend/app/workspace/: page.tsx
frontend/components/: app-header.tsx
frontend/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  empty-state.tsx  label.tsx  separator.tsx  tabs.tsx  textarea.tsx
frontend/components/workspace/: assistant-panel.tsx  chapters-panel.tsx  characters-panel.tsx  overview-panel.tsx  shell.tsx  world-panel.tsx
frontend/lib/: providers.ts
frontend/lib/api/: http.ts  sse.ts
frontend/lib/api/endpoints/: chat.ts  (+4 more)
frontend/lib/hooks/: use-data-changed.ts
frontend/lib/store/: active-profile.ts  inspector-changes.tsx  projects-cache.ts
notes/skills/: README.md  agent-loop-design.md  gateway-buffering-heartbeat.md  hexagonal-python.md  inspector-pattern.md  plan-before-write-prompts.md  refresh-avalanche.md  sse-streaming.md
(+8 files in other folders)
