[project]
name = "book-creater-agent-backend"
version = "0.1.0"
description = "Local-first novel writing agent with RAG knowledge base"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Settings / validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # DB
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",

    # LLM SDKs
    "anthropic>=0.39.0",
    "openai>=1.55.0",
    "httpx>=0.27.0",

    # Utils
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5.20",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "import-linter>=2.1.0",   # 强制六边形单向依赖
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# 六边形依赖检查 — 用 import-linter 在 CI / 本地跑
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "domain 不依赖任何外部框架"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = [
    "fastapi", "sqlalchemy", "chromadb",
    "anthropic", "openai", "httpx",
    "app.adapters", "app.application", "app.config",
]

[[tool.importlinter.contracts]]
name = "ports 不依赖外部框架与 adapters"
type = "forbidden"
source_modules = ["app.ports"]
forbidden_modules = [
    "fastapi", "sqlalchemy", "chromadb",
    "anthropic", "openai",
    "app.adapters", "app.application", "app.config",
]

[[tool.importlinter.contracts]]
name = "application 只能依赖 domain 与 ports"
type = "forbidden"
source_modules = ["app.application"]
forbidden_modules = [
    "fastapi", "sqlalchemy", "chromadb",
    "anthropic", "openai",
    "app.adapters", "app.config",
]
